force-app/main/default/objects/SC_Error_Log__c/SC_Error_Log__c.object-meta.xml
<CustomObject>
    <description>Object to record Error logs</description>
    <label>Application Error Log</label>
    <nameField>
        <displayFormat>EL-{000000}</displayFormat>
        <label>SC_Error_Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Error Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>