force-app/main/default/objects/SC_Error_Log__c/fields/RecordDate__c.field-meta.xml
<CustomField>
    <fullName>RecordDate__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>Date-Time when error occurred</description>
    <inlineHelpText>Date-Time when error occurred</inlineHelpText>
    <label>RecordDate</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>