force-app/main/default/objects/SC_Error_Log__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>ID of record related to error</description>
    <label>RecordId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>