force-app/main/default/objects/SC_Error_Log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Apex Code / Process /  System that caused this error</description>
    <inlineHelpText>Apex Code / Process /  System that caused this error</inlineHelpText>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>